# rust-wasm-web-image

./: Cargo.toml  README.md  package-lock.json  package.json
public/: index.html  main.js
src/: lib.rs
