[package]
name = "rust-wasm-web-image"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
base64 = "0.13.0"
image = { version = "0.24.1", default-features = false, features = ["jpeg"]}

[dependencies.web-sys]
version = "0.3.55"
features = ["console"]
